# sqlit

./: Cargo.toml  Makefile  readme.md
src/: args.rs  ast.rs  build_column.rs  column.rs  column_builder.rs  converters.rs  exec_context.rs  io.rs  lib.rs  main.rs  ops.rs  parser.rs  result.rs  scalar.rs  schema.rs  select.rs  table.rs  tokenizer.rs
src/eval/: columns.rs  commands.rs  from.rs  group_by.rs  into.rs  limit.rs  mod.rs  order_by.rs  select.rs  split.rs  where_.rs
src/ingest/: mod.rs
src/linefeed_io/: mod.rs
src/ops/: binary_ops.rs  boolean.rs  dates.rs  general.rs  math.rs  math_old.rs  mod.rs  null_ops.rs
src/parser/: display.rs  grammar.txt  mod.rs  rdp.rs  rdp_display.rs
src/table/: impl_column.rs  impl_store.rs  impl_table.rs  impl_table_display.rs  impl_table_hash.rs  mod.rs
test/: nba.games.stats.csv  null_test.csv  test.tsv
test/data/: music.csv
tests/: queries_against_null_table.rs  queries_against_table.rs  table_less_queries.rs
tests/data/: capitals_test.csv  containers.spaces  senate_county.csv
