[package]
name = "sqlit"
version = "0.1.0"
authors = ["max <frismo98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = "3.0.0-beta.2"
linefeed="0.6.0"
regex = "0.1.41"
rayon = "1.5.0"
time-test = "0.2.2"
